style.css
body {
  margin: 0;
  height: 100vh;
}

.sections {
  width: 100%;
}

.sectionone {
  background-color: #1F2937;
  display: flex;
  flex-direction: column;
  align-content: center;
  height: auto;
}

.sectiontwo .row {
  display: inline-flex;
  justify-content: space-around
}

.row {
  margin: 5px;
  padding: 5px;
  gap: 5px;
  align-self: center;
}

.pic {
  word-wrap: break-word;
}

.logo {
  display: flex;
  flex-shrink: 0;
  justify-content: space-evenly;
  align-items: center;
  color: #F9FAF8;
  size: 24px;
  gap: 16em;
  padding: 5px;
}

.links {
  display: flex;
  align-items: center;
  gap: 16px;
}

a {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  color: #E5E7EB;
  text-decoration: none;
}

.content {
  display: flex;
  justify-content: center;
  size: 24px;
  padding: 16px;
  height: auto;
  width: 625px;
}

.contentleft {
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: auto;
  width: 275px;
}
.contentright {
  display: flex;
  background-color: gray;
  justify-content: center;
  align-items: center;
  height:auto;
  width: 350px;
}

h2 {
  display: flex;
  justify-content: center;
  align-items: center;
}

